# kppleMenu

./: .gitignore  CMakeLists.txt  README.md  install-plasmoid.sh  reinstall-plasmoid.sh  test-plasmoid.sh  uninstall
package/: metadata.json
package/contents/config/: config.qml  main.xml
package/contents/locale/ar/LC_MESSAGES/: plasma_applet_org.chrtall.kppleMenu.mo
package/contents/locale/de/LC_MESSAGES/: plasma_applet_org.chrtall.kppleMenu.mo
package/contents/locale/de2/LC_MESSAGES/: plasma_applet_org.chrtall.kppleMenu.mo
package/contents/locale/es/LC_MESSAGES/: plasma_applet_org.chrtall.kppleMenu.mo
package/contents/locale/fi/LC_MESSAGES/: plasma_applet_org.chrtall.kppleMenu.mo
package/contents/locale/fr/LC_MESSAGES/: plasma_applet_org.chrtall.kppleMenu.mo
package/contents/locale/hu/LC_MESSAGES/: plasma_applet_org.chrtall.kppleMenu.mo
package/contents/locale/it/LC_MESSAGES/: plasma_applet_org.chrtall.kppleMenu.mo
package/contents/locale/ja/LC_MESSAGES/: plasma_applet_org.chrtall.kppleMenu.mo
package/contents/locale/ko/LC_MESSAGES/: plasma_applet_org.chrtall.kppleMenu.mo
package/contents/locale/nl/LC_MESSAGES/: plasma_applet_org.chrtall.kppleMenu.mo
package/contents/locale/pl/LC_MESSAGES/: plasma_applet_org.chrtall.kppleMenu.mo
package/contents/locale/pt/LC_MESSAGES/: plasma_applet_org.chrtall.kppleMenu.mo
package/contents/locale/ro/LC_MESSAGES/: plasma_applet_org.chrtall.kppleMenu.mo
package/contents/locale/ru/LC_MESSAGES/: plasma_applet_org.chrtall.kppleMenu.mo
package/contents/locale/uk/LC_MESSAGES/: plasma_applet_org.chrtall.kppleMenu.mo
package/contents/ui/: ListDelegate.qml  NewListDelegate.qml  main.qml
package/contents/ui/code/: tools.js
package/contents/ui/config/: configGeneral.qml
package/translate/: ReadMe.md  ar.po  build.sh  de.po  es.po  fi.po  fr.po  hu.po  it.po  ja.po  ko.po  merge.sh  nl.po  pl.po  pt.po  ro.po  ru.po  template.po  template.pot  uk.po  zh_CN.po  zh_TW.po
(+2 files in other folders)
